[package]
name = "netjson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
